# nur

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: commands.rs  main.rs  window.rs
crates/application/: Cargo.toml
crates/application/src/: errors.rs  erros.rs  lib.rs
crates/application/src/errors/: tests.rs
crates/application/src/ports/: bootable_writer.rs  device_browser.rs  device_formatter.rs  disk_service.rs  format.rs  iso_inspector.rs  mod.rs  screenshot_writer.rs  ui_commands.rs  ui_state.rs  write.rs
crates/application/src/ports/ui_state/: tests.rs
crates/application/src/ports/write/: tests.rs
crates/application/src/use_cases/: create_bootable.rs  format_device.rs  list_devices.rs  listar_dispositivos.rs  mod.rs
crates/application/src/use_cases/create_bootable/: tests.rs
crates/application/src/use_cases/format_device/: tests.rs
crates/application/src/use_cases/list_devices/: tests.rs
crates/application/src/use_cases/listar_dispositivos/: tests.rs
crates/domain/: Cargo.toml
crates/domain/src/: byte_size.rs  caminho_dispositivo.rs  device.rs  device_path.rs  dispositivo.rs  format_options.rs  iso_kind.rs  lib.rs  rotulo_volume.rs  volume_label.rs
crates/domain/src/byte_size/: tests.rs
crates/domain/src/caminho_dispositivo/: tests.rs
crates/domain/src/device/: tests.rs
crates/domain/src/device_path/: tests.rs
crates/domain/src/dispositivo/: tests.rs
crates/domain/src/format_options/: tests.rs
crates/domain/src/iso_kind/: tests.rs
crates/domain/src/rotulo_volume/: tests.rs
crates/domain/src/volume_label/: tests.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/linux/: fat32.rs  iso_file_inspector.rs  mod.rs  mount_table.rs  native_fat_formatter.rs  offset_volume.rs  partitioner.rs  raw_copier.rs  sysfs_disk_service.rs  udisks2_block_writer.rs  udisks2_device_browser.rs  udisks2_formatter.rs
crates/infrastructure/src/linux/fat32/: tests.rs
crates/infrastructure/src/linux/iso_file_inspector/: tests.rs
crates/infrastructure/src/linux/mount_table/: tests.rs
crates/infrastructure/src/linux/offset_volume/: tests.rs
crates/infrastructure/src/linux/partitioner/: tests.rs
crates/infrastructure/src/linux/raw_copier/: tests.rs
crates/infrastructure/src/linux/sysfs_disk_service/: tests.rs
crates/infrastructure/src/linux/udisks2_formatter/: tests.rs
crates/infrastructure/src/picker/: mod.rs  rfd_iso_picker.rs
crates/infrastructure/src/screenshot/: mod.rs  png_writer.rs
crates/infrastructure/src/screenshot/png_writer/: tests.rs
crates/infrastructure/src/stub/: disk_service_stub.rs  mod.rs
crates/infrastructure/src/stub/disk_service_stub/: tests.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  captura.rs  capture.rs  lib.rs
crates/ui/src/app/: demo.rs  draw.rs  header.rs  modal.rs  options.rs  status.rs  tests.rs
crates/ui/src/captura/: tests.rs
crates/ui/src/capture/: tests.rs
crates/ui/src/components/: button.rs  checkbox.rs  field_label.rs  mod.rs  select.rs  text_input.rs
crates/ui/src/theme/: fonts.rs  mod.rs  palette.rs  theme_kit.rs
crates/ui/src/theme/palette/: tests.rs
crates/ui/src/theme/theme_kit/: tests.rs
docs/: CONTINUACAO.md  README.md  fase2-feedback.md
docs/decisoes/: 0001-stack-rust-egui.md  0002-arquitetura-hexagonal.md  0003-cross-platform-faseado.md  0004-backend-disco-udisks-polkit.md  0005-gravador-inteligente-vs-ventoy.md  0006-ordem-raw-write-primeiro-com-spike.md  0007-tema-claro-escuro.md  0008-padroes-qualidade-lints.md  0009-nome-do-projeto.md  0010-nucleo-rust-nativo.md  README.md
docs/pesquisa/: 01-projeto-referencia-solana.md  02-ferramentas-rust-usb-iso.md  03-gravacao-iso-linux-vs-windows.md
docs/spikes/: 2026-06-29-windows-uefi-recipe.md
docs/superpowers/plans/: 2026-06-26-nur-fase1-fundacao-linux.md  2026-06-27-english-identifiers.md  2026-06-27-plano3-enumeracao-real-linux.md  2026-06-28-abrir-pendrive-gerenciador.md  2026-06-28-gravacao-raw-linux.md  2026-06-28-modo-formatar.md  2026-06-29-formatador-fat32-nativo.md
docs/superpowers/specs/: 2026-06-26-interface-formatador-pendrive-design.md  2026-06-27-plano3-enumeracao-real-linux-design.md  2026-06-28-abrir-pendrive-gerenciador-design.md  2026-06-28-gravacao-raw-linux-design.md  2026-06-28-modo-formatar-design.md  2026-06-29-formatador-fat32-nativo-design.md
superdesign/: gallery.html
superdesign/design_iterations/: desktop_app_for_form_1.html  desktop_app_for_form_1_1.html  desktop_app_for_form_2.html
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
tools/xtask/src/bin_visibility/: rule.rs
tools/xtask/src/bin_visibility/rule/: tests.rs
tools/xtask/src/line_limit/: rule.rs
tools/xtask/src/line_limit/rule/: tests.rs
tools/xtask/src/pub_fields/: rule.rs
tools/xtask/src/pub_fields/rule/: tests.rs
