[package]
name = "app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "nur"

[[bin]]
name = "nur"
path = "src/main.rs"

[dependencies]
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
ui = { path = "../ui" }
eframe.workspace = true
tokio.workspace = true
anyhow.workspace = true

[lints]
workspace = true
