[package]
name = "infrastructure"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
image = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true }
rfd = { workspace = true }
gpt = { workspace = true }
fatfs = { workspace = true }
mbrman = { workspace = true }

[lints]
workspace = true
