[package]
name = "ui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
egui.workspace = true
eframe.workspace = true
serde = { workspace = true }

[lints]
workspace = true
