[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

# O '[workspace]' vazio desacopla o xtask do workspace de produção,
# para que os 'members' sejam exatamente as camadas da arquitetura.
[workspace]

[lints.clippy]
all = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
